--- a/uiouiouio/index.html
+++ b/uiouiouio/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>papa</title>
+    <title>Document</title>
 </head>
 <body>
-<h3 style="color:blue" > <i>salam <mark> necesen </mark> nevar  ne yox  </i></h3>  
-
+    <img>alt
 </body>
 </html>
